# cipher-chat

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: cli.rs  main.rs
server/: Cargo.toml
server/src/: cli.rs  main.rs
