[workspace]
members = ["client", "common", "server"]

resolver = "2"

[workspace.dependencies]
color-eyre = "0.6.3"
clap = { version = "4.5.21", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.113"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
